# programowanie_obiektowe

./: CMakeLists.txt  README.md  newton.cpp  newton.cpp.orig  newton.h  runTests  test.cpp  test_repo_lb.txt
.github/workflows/: c-cpp.yml
doc/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
zadanie/: CMakeLists.txt  main.cpp  newton.cpp
